--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "colors": "^1.4.0",
-    "discord-rpc": "^3.2.0"
+    "discord-rpc": "^4.0.1"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,5 @@
   "bugs": {
     "url": "https://github.com/Tomato6966/Discord-Rich-Presence/issues"
   },
-  "homepage": "https://github.com/Tomato6966/Discord-Rich-Presence#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/Tomato6966/Discord-Rich-Presence#readme"
 }
